--- a/style.css
+++ b/style.css
@@ -103,3 +103,34 @@ a:hover {
 
 
 
+#contactMeBtn{
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-family: Roboto, sans-serif;
+  font-weight: 0;
+  font-size: 14px;
+  color: #fff;
+  background-color: #7ECE90;
+  padding: 10px 30px;
+  border: 2px solid #7ECE90;
+  box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+  border-radius: 50px;
+  transition : 1000ms;
+  transform: translateY(0);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
+}
+#contactMeBtn:hover{
+  transition : 1000ms;
+  padding: 10px 50px;
+  transform : translateY(-0px);
+  background-color: #fff;
+  color: #7ECE90;
+  border: solid 2px #7ECE90;
+}
+
+ 
+
